# ctx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.context/: build-fix-notes.md  causality-vendor-update.md  context-server.md  gui-list-tabs.md
src/: main.c  pch.h
src/api/: api.c  api.h
src/app/: app.c  app.h
src/bench/: bench.c  bench.h
src/context/: context.c  context.h
src/event/: event.c  event.h
src/extractor/: extractor.c  extractor.h
src/graph/: graph.c  graph.h
src/indexer/: indexer.c  indexer.h
src/install/: install.c  install.h
src/jobs/: jobs.c  jobs.h
src/log/: log.c  log.h
src/mcp/: mcp.c  mcp.h
src/parser/: parser.c  parser.h
src/retrieve/: retrieve.c  retrieve.h
src/stats/: stats.c  stats.h
src/store/: store.c  store.h
src/ui/: app_window.c  app_window.h  force_graph.c  force_graph.h
src/watcher/: watcher.c  watcher.h
tests/: install_smoke.py  live_update_smoke.sh  mcp_smoke.py
